Remove needless Perl 5 module reference

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -544,9 +544,8 @@ B<not> passed.  Both functions accept an optional test C<$description>.
 
     flunk "But this one hasn't passed";
 
-As the Perl 5 documentation for C<Test::More> notes, such constructs are
-used when one has a complicated test condition.  As such, they should be
-used very, very sparingly.
+Such constructs are used when one has a complicated test condition.
+As such, they should be used very, very sparingly.
 
 =item X<diag($message)|diag>
 
