--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -544,8 +544,9 @@ B<not> passed.  Both functions accept an optional test C<$description>.
 
     flunk "But this one hasn't passed";
 
-Such constructs are used when one has a complicated test condition.
-As such, they should be used very, very sparingly.
+Since these subroutines do not provide indication of what value was received
+and what was expected, they should be used sparingly, such as when evaluating
+a complex test condition.
 
 =item X<diag($message)|diag>
 
