Post-condition → Postcondition

--- a/Language/phasers.pod
+++ b/Language/phasers.pod
@@ -156,7 +156,7 @@ teardown usually want to happen in the opposite order from each other.
        KEEP {...} #  at every successful block exit, part of LEAVE queue
        UNDO {...} #  at every unsuccessful block exit, part of LEAVE queue
 
-    Post-condition for block
+    Postcondition for block
 
        POST {...} #  assert postcondition at every block exit, after LEAVE
 
