--- a/Language/phasers.pod
+++ b/Language/phasers.pod
@@ -226,7 +226,7 @@ phasers are only installed the first time they're noticed.)
 
 =head1 Block Phasers
 
-Execution in the context of a block has it's own phases.
+Execution in the context of a block has its own phases.
 
 Block-leaving phasers wait until the call stack is actually unwound to run.
 Unwinding happens only after some exception handler decides to handle the
