Space after commas
As per #624

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -1331,7 +1331,7 @@ method I. e. C<sort(@a)> is equivalent to C<@a.sort>.
 
 =item splice EXPR
 
-Available in Perl 6. Can also be used as a method. C<< splice(@foo, 2,3,
+Available in Perl 6. Can also be used as a method. C<< splice(@foo, 2, 3,
 <M N O P>); >> is equivalent to C<< @foo.splice(2, 3, <M N O P>); >>.
 
 =head2 split
@@ -1735,11 +1735,11 @@ a C<List> or C<Array> in a C<Scalar>, simply returning a list may be
 all that is needed:
 
     sub listofstuff {
-        return 1,2,3;
+        return 1, 2, 3;
     }
     my $a = listofstuff();
-    print $a;                     # prints "123"
-    print join("<",listofstuff()) # prints "1<2<3"
+    print $a;                      # prints "123"
+    print join("<", listofstuff()) # prints "1<2<3"
 
 One of the most common use cases is to provide either an array of lines
 or elements, or a prettier string than would be produced by simply
@@ -1751,8 +1751,8 @@ purpose:
             method Str { self.join("<") }
         }
     }
-    print prettylist(1,2,3);  # prints "1<2<3"
-    print join(">", prettylist(3,2,1)); # prints "3>2>1"
+    print prettylist(1, 2, 3);  # prints "1<2<3"
+    print join(">", prettylist(3, 2, 1)); # prints "3>2>1"
 
 In the above example, the returned list may be lazy, and the C<.Str> method
 is not called until stringification happens, so no extra work is done
