--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -132,10 +132,10 @@ $^z)>. Ergo:
 
 =begin code
 
-    sort { $^a cmp $^z }, 1,5,6,4,2,3;
-    # 1,2,3,4,5,6
-    sort { $^g cmp $^a }, 1,5,6,4,2,3;
-    # 6,5,4,3,2,1
+    sort { $^a cmp $^z }, 1, 5, 6, 4, 2, 3;
+    # (1 2 3 4 5 6)
+    sort { $^g cmp $^a }, 1, 5, 6, 4, 2, 3;
+    # (6 5 4 3 2 1)
     for 1..9 { say $^c, $^a, $^b; last }
     # 312
 
