--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -214,12 +214,12 @@ Note that, while supported, one should generally avoid directly binding
 uncontainerized things into array elements.  Doing so may produce
 counter-intuitive results when the array is used later.
 
-    my @a = (1,2,3);
+    my @a = (1, 2, 3);
     @a[0] := 42;         # This is not recommended, use assignment instead.
     my $b := 42;
     @a[1] := $b;         # Nor is this.
     @a[2] = $b;          # ...but this is fine.
-    @a[1,2] := 1,2;      # This is not allowed and will fail.
+    @a[1, 2] := 1, 2;    # This is not allowed and will fail.
 
 Operations that mix Lists and Arrays generally protect against such
 a thing happening accidentally.
