--- a/Language/control.pod
+++ b/Language/control.pod
@@ -99,7 +99,7 @@ expression.  So:
 the expression it is contained in is evaluated:
 
     # This says "(..1 ..2 ..3)" not "(..1 ...2 ....3)"
-    my $f = "."; say do { $f ~= "." } X~ 1,2,3;
+    my $f = "."; say do { $f ~= "." } X~ 1, 2, 3;
 
 In other words, it follows the same reification rules as everything else.
 
@@ -350,9 +350,9 @@ assign them to an array:
 
 =begin code
 
-(for 1,2,3 { $_ * 2 }).say;             # says "(2 4 6)"
-my @a = do for 1,2,3 { $_ * 2 }; @a.say;# says "[2 4 6]"
-my @a = (for 1,2,3 { $_ * 2 }); @a.say; # same thing
+(for 1, 2, 3 { $_ * 2 }).say;              # says "(2 4 6)"
+my @a = do for 1, 2, 3 { $_ * 2 }; @a.say; # says "[2 4 6]"
+my @a = (for 1, 2, 3 { $_ * 2 }); @a.say;  # same thing
 
 =end code
 
