--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -679,7 +679,7 @@ Examples:
     # A perl program which works under both perl5 (with perl -Mbigint)
     # and perl6
 
-    my ($prev, $current) = (1,0);
+    my ($prev, $current) = (1, 0);
 
     for (0..100_000) {
         ($prev, $current) = ($current, $prev + $current);
