--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -167,16 +167,16 @@ can use it on methods as well. The candidates are all the multi methods of the
 object:
 
     class Congrats {
-        multi method congratulate($reason,$name) {
+        multi method congratulate($reason, $name) {
             say "Hooray for your $reason, $name";
         }
     }
 
     role BirthdayCongrats {
-        multi method congratulate('birthday',$name) {
+        multi method congratulate('birthday', $name) {
             say "Happy birthday, $name";
         }
-        multi method congratulate('birthday',$name,$age) {
+        multi method congratulate('birthday', $name, $age) {
             say "Happy {$age}th birthday, $name";
         }
     }
@@ -230,8 +230,8 @@ C<{*}> always dispatches to candidates with the parameters it's called
 with. Parameter defaults and type coercions will work but are not be passed on.
 
     proto mistake-proto(Str() $str, Int $number = 42) {*}
-    multi mistake-proto($str,$number) { say $str.WHAT }
-    mistake-proto(7,42);   #-> (Int) -- coercions not passed on
+    multi mistake-proto($str, $number) { say $str.WHAT }
+    mistake-proto(7, 42);  #-> (Int) -- coercions not passed on
     mistake-proto('test'); #!> fails -- defaults not passed on
 
 =comment only
@@ -271,29 +271,29 @@ This can be achieved by using a slurpy with a C<+> or C<+@> instead of C<**>:
 This results in the following behavior, which is known as the "single
 argument rule" and is important to understand when invoking slurpy functions:
 
-    grab(1,2);     # grab 1 grab 2
-    grab((1,2));   # grab 1 grab 2
-    grab($(1,2));  # grab 1 2
-    grab((1,2),3); # grab 1 2 grab 3
+    grab(1, 2);      # grab 1 grab 2
+    grab((1, 2));    # grab 1 grab 2
+    grab($(1, 2));   # grab 1 2
+    grab((1, 2), 3); # grab 1 2 grab 3
 
 This also makes user-requested flattening feel consistent whether there is
 one sublist, or many:
 
-    grab(flat (1,2),(3,4));   # grab 1 grab 2 grab 3 grab 4
-    grab(flat $(1,2),$(3,4)); # grab 1 2 grab 3 4
-    grab(flat (1,2));         # grab 1 grab 2
-    grab(flat $(1,2));        # grab 1 2
+    grab(flat (1, 2), (3, 4));   # grab 1 grab 2 grab 3 grab 4
+    grab(flat $(1, 2), $(3, 4)); # grab 1 2 grab 3 4
+    grab(flat (1, 2));           # grab 1 grab 2
+    grab(flat $(1, 2));          # grab 1 2
 
 It is worth noting that mixing binding and sigilless variables
 in these cases requires a bit of finesse, because there is no Scalar
 intermediary used during binding.
 
-    my $a = (1,2);  # Normal assignment, equivalent to $(1,2)
-    grab ($a);      # grab 1 2
-    my $b := (1,2); # Binding, $b links directly to a bare (1,2)
-    grab ($b);      # grab 1 grab 2
-    my \c = (1,2);  # Sigilless variables always bind, even with '='
-    grab (c);       # grab 1 grab 2
+    my $a = (1, 2);  # Normal assignment, equivalent to $(1, 2)
+    grab ($a);       # grab 1 2
+    my $b := (1, 2); # Binding, $b links directly to a bare (1, 2)
+    grab ($b);       # grab 1 grab 2
+    my \c = (1, 2);  # Sigilless variables always bind, even with '='
+    grab (c);        # grab 1 grab 2
 
 =head1 Functions are First-Class Objects
 
