--- a/Language/list.pod
+++ b/Language/list.pod
@@ -15,22 +15,22 @@ an elegant system for handling them.
 Literal L<C<List>s|/type/List> are created with commas B<not> with
 parentheses, so:
 
-    1,2         # This is two-element list
-    (1,2)       # This is also a list, in parentheses
+    1, 2        # This is two-element list
+    (1, 2)      # This is also a list, in parentheses
     (1)         # This is not a list, just a 1 in parentheses
     (1,)        # This is a one-element list
 
 Parentheses can be used to mark the beginning and end of a list, so:
 
-    (1,2),(1,2) # This is a list of two lists.
+    (1, 2), (1, 2) # This is a list of two lists.
 
 Individual elements can be pulled out of a list using a subscript.  The
 first element of a list is at index number zero:
 
-    say (1,2)[0];  # says 1
-    say (1,2)[1];  # says 2
-    say (1,2)[2];  # says Nil
-    say (1,2)[-1]; # Error
+    say (1, 2)[0];  # says 1
+    say (1, 2)[1];  # says 2
+    say (1, 2)[2];  # says Nil
+    say (1, 2)[-1]; # Error
 
 =head1 The @ sigil
 
@@ -43,7 +43,7 @@ By default, when you assign a list to an C<@>-sigiled variable, you create
 an C<Array>.  Those are described below.  If, instead you want to put an actual
 C<List> into an C<@>-sigiled variable, you can use binding with C<:=> instead.
 
-    my @a := 1,2,3;
+    my @a := 1, 2, 3;
 
 One of the ways C<@>-sigiled variables act like lists is by always supporting
 L<positional subscripting|/language/subscripts>.  Anything bound to a C<@>-sigiled
@@ -57,7 +57,7 @@ To remove all elements from a Positional container assign
 L<C<Empty>|/type/Slip#Empty>, the empty list C<()> or a C<Slip> of the empty
 list to the container.
 
-    my @a = 1,2,3;
+    my @a = 1, 2, 3;
     @a = ();
     @a = Empty;
     @a = |();
@@ -67,7 +67,7 @@ list to the container.
 All lists may be iterated, which means taking each element from the
 list in order and stopping after the last element:
 
-    for 1,2,3 { .say } # says 1, then says 2, then says 3
+    for 1, 2, 3 { .say } # says 1, then says 2, then says 3
 
 =head1 Testing for Elements
 
@@ -133,17 +133,17 @@ for details.
 Sometimes you want to insert the elements of a list into another list.
 This can be done with a special type of list called a C<Slip>.
 
-    say (1,(2,3),4) eqv (1,2,3,4);         # says False
-    say (1,Slip.new(2,3),4) eqv (1,2,3,4); # says True
-    say (1,slip(2,3),4) eqv (1,2,3,4);     # also says True
+    say (1, (2, 3), 4) eqv (1, 2, 3, 4);         # says False
+    say (1, Slip.new(2, 3), 4) eqv (1, 2, 3, 4); # says True
+    say (1, slip(2, 3), 4) eqv (1, 2, 3, 4);     # also says True
 
 Another way to make a C<Slip> is with the C<|> prefix operator.  Note that
 this has a tighter precedence than the comma, so it only affects a single
 value, but unlike the above options, it will break L<Scalars|/type/Scalar>.
 
-    say (1,|(2,3),4) eqv (1,2,3,4);        # says True
-    say (1,|$(2,3),4) eqv (1,2,3,4);       # also says True
-    say (1,slip($(2,3)),4) eqv (1,2,3,4);  # says False
+    say (1, |(2, 3), 4) eqv (1, 2, 3, 4);        # says True
+    say (1, |$(2, 3), 4) eqv (1, 2, 3, 4);       # also says True
+    say (1, slip($(2, 3)), 4) eqv (1, 2, 3, 4);  # says False
 
 =head1 Immutability
 
@@ -151,15 +151,15 @@ The lists we have talked about so far (C<List>, C<Seq> and C<Slip>)
 are all immutable.  This means you cannot remove elements from them,
 or re-bind existing elements:
 
-    (1,2,3)[0]:delete; # Error Can not remove elements from a List
-    (1,2,3)[0] := 0;   # Error Cannot use bind operator with this left-hand side
-    (1,2,3)[0] = 0;    # Error Cannot modify an immutable Int
+    (1, 2, 3)[0]:delete; # Error Can not remove elements from a List
+    (1, 2, 3)[0] := 0;   # Error Cannot use bind operator with this left-hand side
+    (1, 2, 3)[0] = 0;    # Error Cannot modify an immutable Int
 
 However, if any of the elements is wrapped in a L<C<Scalar>|/type/Scalar> you
 can still change the value which that C<Scalar> points to:
 
     my $a = 2;
-    (1,$a,3)[1] = 42;
+    (1, $a, 3)[1] = 42;
     $a.say;            # says 42
 
 ...that is, it is only the list structure itself -- how many elements there are
@@ -188,7 +188,7 @@ When you have a list that contains sub-lists, but you only want one flat list,
 you may flatten the list to produce a sequence of values as if all parentheses
 were removed. This works no matter how many levels deep the parentheses are nested.
 
-    say (1,(2,(3,4)),5).flat eqv (1,2,3,4,5) # says True
+    say (1, (2, (3, 4)), 5).flat eqv (1, 2, 3, 4, 5) # says True
 
 This is not really a syntactical "context" as much as it is a process of
 iteration, but it has the appearance of a context.
@@ -196,13 +196,13 @@ iteration, but it has the appearance of a context.
 Note that L<C<Scalar>s|/type/Scalar> around a list will make it immune to
 flattening:
 
-    for (1,(2,$(3,4)),5).flat { .say } # says 1, then 2, then (3 4), then 5
+    for (1, (2, $(3, 4)), 5).flat { .say } # says 1, then 2, then (3 4), then 5
 
 ...but an C<@>-sigiled variable will spill its elements.
 
-    my @l := 2,(3,4);
+    my @l := 2, (3, 4);
     for (1, @l, 5).flat { .say };      # says 1, then 2, then 3, then 4, then 5
-    my @a = 2,(3,4);                   # Arrays are special, see below
+    my @a = 2, (3, 4);                 # Arrays are special, see below
     for (1, @a, 5).flat { .say };      # says 1, then 2, then (3 4), then 5
 
 =head2 Argument List (Capture) Context
@@ -253,7 +253,7 @@ of pair forms happens.
 Most C<Positional> types will enforce an integer coercion on each element
 of a slice index, so pairs appearing there will generate an error, anyway:
 
-    (1,2,3)[1, 2, :c(3)] # Method 'Int' not found for invocant of class 'Pair'
+    (1, 2, 3)[1, 2, :c(3)] # Method 'Int' not found for invocant of class 'Pair'
 
 ...however this is entirely up to the type -- if it defines an order
 for pairs, it could consider C<:c(3)> a valid index.
@@ -263,7 +263,7 @@ neither are sublists usually coerced to C<Int>.  Instead, the list structure
 is kept intact, causing a nested slice operation that replicates the
 structure in the result:
 
-    say ("a","b","c")[(1,2),(0,1)] eqv (("b", "c"), ("a", "b")) # says True
+    say ("a", "b", "c")[(1, 2), (0, 1)] eqv (("b", "c"), ("a", "b")) # says True
 
 =head2 Range as Slice
 
@@ -311,26 +311,26 @@ is of type C<Array[Int]> and one can create one with C<Array[Int].new>.  If
 you intend to use an C<@>-sigiled variable only for this purpose, you may
 change its type by specifying the type of the elements when declaring it:
 
-    my Int @a = 1, 2, 3;            # An Array that contains only Ints
-    my @b := Array[Int].new(1,2,3); # Same thing, but the variable is not typed
-    say @b eqv @a;                  # says True.
-    my @c = 1, 2, 3;                # An Array that can contain anything
-    say @b eqv @c;                  # says False because types do not match
-    say @c eqv (1,2,3);             # says False because one is a List
-    say @b eq @c;                   # says True, because eq only checks values
-    say @b eq (1,2,3);              # says True, because eq only checks values
+    my Int @a = 1, 2, 3;              # An Array that contains only Ints
+    my @b := Array[Int].new(1, 2, 3); # Same thing, but the variable is not typed
+    say @b eqv @a;                    # says True.
+    my @c = 1, 2, 3;                  # An Array that can contain anything
+    say @b eqv @c;                    # says False because types do not match
+    say @c eqv (1, 2, 3);             # says False because one is a List
+    say @b eq @c;                     # says True, because eq only checks values
+    say @b eq (1, 2, 3);              # says True, because eq only checks values
 
-    @a[0] = 42;                     # fine
-    @a[0] = "foo";                  # error: Type check failed in assignment
+    @a[0] = 42;                       # fine
+    @a[0] = "foo";                    # error: Type check failed in assignment
 
 In the above example we bound a typed Array object to a C<@>-sigil variable for
 which no type had been specified.  The other way around does not work -- you may
 not bind an Array that has the wrong type to a typed C<@>-sigiled variable:
 
-    my @a := Array[Int].new(1,2,3);     # fine
-    @a := Array[Str].new("a","b");      # fine, can be re-bound
-    my Int @b := Array[Int].new(1,2,3); # fine
-    @b := Array.new(1,2,3);             # error: Type check failed in binding
+    my @a := Array[Int].new(1, 2, 3);     # fine
+    @a := Array[Str].new("a", "b");       # fine, can be re-bound
+    my Int @b := Array[Int].new(1, 2, 3); # fine
+    @b := Array.new(1, 2, 3);             # error: Type check failed in binding
 
 When working with typed arrays, it is important to remember that they are
 nominally typed. This means the declared type of an array is what matters.
@@ -342,19 +342,19 @@ Given the following sub declaration:
 
 Calls that pass an Array[Int] will be successful:
 
-    my Int @b = 1,3,5;
+    my Int @b = 1, 3, 5;
     say mean(@b);                       # @b is Array[Int]
-    say mean(Array[Int].new(1,3,5));    # Anonymous Array[Int]
-    say mean(my Int @ = 1,3,5);         # Another anonymous Array[Int]
+    say mean(Array[Int].new(1, 3, 5));  # Anonymous Array[Int]
+    say mean(my Int @ = 1, 3, 5);       # Another anonymous Array[Int]
 
 However, the following calls will all fail, due to passing an untyped array,
 even if the array just happens to contain Int values at the point it is
 passed:
 
-    my @c = 1,3,5;
+    my @c = 1, 3, 5;
     say mean(@c);                       # Fails, passing untyped Array
-    say mean([1,3,5]);                  # Same
-    say mean(Array.new(1,3,5));         # Same again
+    say mean([1, 3, 5]);                # Same
+    say mean(Array.new(1, 3, 5));       # Same again
 
 Note that in any given compiler, there may be fancy, under-the-hood, ways to
 bypass the type check on arrays, so when handling untrusted input, it can be
@@ -397,9 +397,9 @@ means that C<$(…)>s are being put around everything that you assign to an
 array, if you do not put them there yourself.  On the other side, Array.perl
 does not put C<$> to explicitly show scalars, unlike List.perl:
 
-    ((1,2),$(3,4)).perl.say; # says "((1, 2), $(3, 4))"
-    [(1,2),$(3,4)].perl.say; # says "[(1, 2), (3, 4)]"
-                             # ...but actually means: "[$(1,2), $(3,4)]"
+    ((1, 2), $(3, 4)).perl.say; # says "((1, 2), $(3, 4))"
+    [(1, 2), $(3, 4)].perl.say; # says "[(1, 2), (3, 4)]"
+                                # ...but actually means: "[$(1, 2), $(3, 4)]"
 
 It was decided all those extra dollar signs and parentheses were more of an
 eye sore than a benefit to the user.  Basically, when you see a square bracket,
@@ -409,14 +409,14 @@ Second, remember that these invisible dollar signs also protect against
 flattening, so you cannot really flatten the elements inside of an Array
 with a normal call to C<flat> or C<.flat>.
 
-    ((1,2),$(3,4)).flat.perl.say; # (1, 2, $(3, 4)).Seq
-    [(1,2),$(3,4)].flat.perl.say; # ($(1, 2), $(3, 4)).Seq
+    ((1, 2), $(3, 4)).flat.perl.say; # (1, 2, $(3, 4)).Seq
+    [(1, 2), $(3, 4)].flat.perl.say; # ($(1, 2), $(3, 4)).Seq
 
 Since the square brackets do not themselves protect against flattening,
 you can still spill the elements out of an Array into a surrounding list
 using C<flat>.
 
-    (0,[(1,2),$(3,4)],5).flat.perl.say; # (0, $(1, 2), $(3, 4), 5).Seq
+    (0, [(1, 2), $(3, 4)], 5).flat.perl.say; # (0, $(1, 2), $(3, 4), 5).Seq
 
 ...the elements themselves, however, stay in one piece.
 
@@ -424,7 +424,7 @@ This can irk users of data you provide if you have deeply nested Arrays
 where they want flat data.  Currently they have to deeply map the structure
 by hand to undo the nesting:
 
-    say gather [0,[(1,2),[3,4]],$(5,6)].deepmap: *.take; # 1 2 3 4 5 6
+    say gather [0, [(1, 2), [3, 4]], $(5, 6)].deepmap: *.take; # 1 2 3 4 5 6
 
 ...future versions of Perl 6 might find a way to make this easier.  However,
 not returning Arrays or itemized lists from functions, when non-itemized lists
@@ -460,7 +460,7 @@ Unlike lists, Arrays are mutable.  Elements may deleted, added, or changed.
     @a.say;                  # says "[a b]"
     @a.push("d");
     @a.say;                  # says "[a b d]"
-    @a[1,3] = "c","c";
+    @a[1, 3] = "c", "c";
     @a.say;                  # says "[a c d c]"
 
 
@@ -472,7 +472,7 @@ an C<Array> is, likewise, eager, but only up to the requested number of elements
 which may be finite:
 
     my @a;
-    @a[0,1,2] = (loop { 42 });
+    @a[0, 1, 2] = (loop { 42 });
     @a.say;                     # says "[42 42 42]"
 
 During assignment, each value will be typechecked to ensure it is a permitted
