--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -168,7 +168,7 @@ Z<blocked by #63642 my @a = 1,2; @a ,= 3,4;>
 
 This behavior is automatically extended to include custom-defined infix operators.
 
-    sub infix:<space-concat> ($a,$b) { $a ~ " " ~ $b };
+    sub infix:<space-concat> ($a, $b) { $a ~ " " ~ $b };
     my $a = 'word1';
     $a space-concat= 'word2'; # 'word1 word2'
 
@@ -210,13 +210,13 @@ point to the shorter list. A list with just one element is fine too. If one of
 the lists is shorter then the other, the operator will cycle over the shorter
 list until all elements of the longer list are processed.
 
-    say (1,2,3) »*» 2;       # (2,4,6)
-    say (1,2,3,4) »~» <a b>; # (1a 2b 3a 4b)
-    say (1,2,3) »+« (4,5,6); # (5 7 9)
+    say (1, 2, 3) »*» 2;          # (2 4 6)
+    say (1, 2, 3, 4) »~» <a b>;   # (1a 2b 3a 4b)
+    say (1, 2, 3) »+« (4, 5, 6);  # (5 7 9)
 
 Assignment meta operators can be hyped.
 
-    my @a = 1,2,3;
+    my @a = 1, 2, 3;
     say @a »+=» 1; # [2 3 4]
 
 Hyper forms of unary operators have the pointy bit point to the operator and
@@ -225,8 +225,8 @@ the blunt end at the list to be operated on.
     my @wisdom = True, False, True;
     say !« @wisdom; # [False True False]
 
-    my @a = 1,2,3;
-    @a»++;          # (2,3,4)
+    my @a = 1, 2, 3;
+    @a»++;           # (2, 3, 4)
 
 Hyper operators are defined recursively on nested arrays.
 
@@ -256,14 +256,14 @@ C<%foo »+« %bar;>       union of keys
 C<%outer »+» %inner;>   only keys of %inner that exist in %outer will occur in the result
 =end table
 
-    my %outer = 1,2,3 Z=> <a b c>;
-    my %inner = 1,2 Z=> <x z>;
+    my %outer = 1, 2, 3 Z=> <a b c>;
+    my %inner = 1, 2 Z=> <x z>;
     say %outer «~» %inner; # {"1" => "ax", "2" => "bz"}
 
 Hyper operators can take user defined operators as its operator argument.
 
     sub pretty-file-site (Int $size --> Str) {
-        # rounding version of infix:</>(Int,Int)
+        # rounding version of infix:</>(Int, Int)
         sub infix:<r/>(Int \i1, Int \i2) {
             round(i1 / i2, 0.1)
         }
@@ -289,7 +289,7 @@ Hyper operators do not descent into child lists. You can chain hyper operators
 to destructure a List of Lists.
 
     my $neighbors = ((-1, 0), (0, -1), (0, 1), (1, 0));
-    my $p = (2,3);
+    my $p = (2, 3);
     say $neighbors »>>+<<» ($p, *); # ((1 3) (2 2) (2 4) (3 3))
 
 =head1 Reduction Operators
@@ -297,20 +297,20 @@ to destructure a List of Lists.
 Reduction operators apply any infix operator, surrounded by C<[> and C<]>,
 element by element and return the resulting value.
 
-    say [+] 1,2,3; # 6
+    say [+] 1, 2, 3; # 6
 
 They can be defined as a list prefix operators or will be generated automatically.
 
     multi infix:<[~~]> (@c, &test) is looser(&infix:<~~>) {
         gather for @c { take $_ if test($_) }
     };
-    my @l = 1,'a',2,'b';
+    my @l = 1, 'a', 2, 'b';
     say @l [~~] {$^a ~~ Str}; # (a b)
 
 For list infix operators, flattening is not done on the input list. This
 allows list operators to become the reduction operator.
 
-    [X~] (1,2), <a b> # 1,2 X~ <a b>
+    [X~] (1, 2), <a b> # 1, 2 X~ <a b>
 
 By default reduction meta operators are eager. To lazily generate values,
 prefix the operator with a C<\>. If the non-meta part contains a C<\> already,
@@ -333,7 +333,7 @@ quickly.
 The zip metaoperator, C<Z>, will apply a given infix operator to pairs taken
 one left, one right, from its arguments. The resulting list is returned.
 
-    my @l = <a b c> Z~ 1,2,3; # [a1 b2 c3]
+    my @l = <a b c> Z~ 1, 2, 3; # [a1 b2 c3]
 
 If one of the operands runs out of elements prematurely, the zip operator will
 stop. An infinite list can be used to repeat elements. A list with a final
@@ -358,8 +358,8 @@ done by the optimizer. Most simple infix operators are supported.
 To avoid ambiguity when chaining meta operators use square brackets to help the
 compiler to understand you.
 
-    my @a = 1,2,3;
-    my @b = 5,6,7;
+    my @a = 1, 2, 3;
+    my @b = 5, 6, 7;
     @a X[+=] @b;
     say @a; # [19 20 21]
 
@@ -569,7 +569,7 @@ call.
     my $addition = Operation.new(:symbol<+>, :function{ $^a + $^b });
     say $addition.function()(1, 2); # 3
     # OR
-    say $addition.function.(1,2); # 3
+    say $addition.function.(1, 2); # 3
 
 If the postfix is an identifier, however, it will be interpreted as a normal
 method call.
@@ -1927,7 +1927,7 @@ that reduces using that operation.
 =begin code
 
     [+] 1, 2, 3;      # 1 + 2 + 3 = 6
-    my @a = (5,6);
+    my @a = (5, 6);
     [*] @a;           # 5 * 6 = 30
 
 =end code
