--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -131,9 +131,9 @@ is L<Any>):
 However, other types of collections may react differently to subscripts that
 address nonexistent elements:
 
-    say (0, 10, 20)[3];          #-> Nil
-    say bag(<a a b b b>)<c>;     #-> 0
-    say array[uint8].new(1,2)[2] #-> 0
+    say (0, 10, 20)[3];           #-> Nil
+    say bag(<a a b b b>)<c>;      #-> 0
+    say array[uint8].new(1, 2)[2] #-> 0
 
 To silently skip nonexistent elements in a subscripting operation, see
 L<#Truncating slices> and the L<#:v> adverb.
@@ -251,7 +251,7 @@ lists, a lazy subscript will not truncate as long as it does not have to
 lazily generate values, but once it starts generating values lazily, it
 will stop if it generates a value that points to a nonexistent index.
 
-    dd @letters[0,2,4...*];     # Every other element of the array.
+    dd @letters[0, 2, 4 ... *];     # Every other element of the array.
 
 This feature is more for protection against accidental out-of-memory
 problems than for actual use.  Since some lazy sequences cache their
@@ -259,7 +259,7 @@ results, every time they are used in a truncation, they accumulate one
 more known element.  Things like this should probably be avoided rather
 than used for effect:
 
-    my @a = 2,3 ... *;
+    my @a = 2, 3 ... *;
     dd flat @letters[0, 7, @a]; #-> ("a", Any, "c", "d", "e", "f")
     dd flat @letters[0, 7, @a]; #-> ("a", Any, "c", "d", "e", "f", Any)
 
@@ -275,7 +275,7 @@ So, to safely use lazy indices, they should be one-shot things which
 are guaranteed to overrun the array.  The following alternate formulation
 will produce a fully lazy result (but will not truncate):
 
-    my $a = (0 xx *).map({ @letters[$_] }); # "a","a","a" ... forever
+    my $a = (0 xx *).map({ @letters[$_] }); # "a", "a", "a" ... forever
 
 If you I<don't> want to specify your slice as a range/sequence but still want
 to silently skip nonexistent elements, you can use the L<#:v> adverb.
@@ -307,7 +307,7 @@ entire arrays / hashes into strings:
 Dimensions in subscripts are separated by a semicolon, allowing to mix lists of
 elements and dimensions.
 
-    my @twodim = (<a b c>, (1,2,3));
+    my @twodim = (<a b c>, (1, 2, 3));
     dd @twodim;
     # OUTPUT«Array @twodim = [("a", "b", "c"), (1, 2, 3)]␤»
     dd @twodim[0,1;1]; # 2nd element of both lists
@@ -315,7 +315,7 @@ elements and dimensions.
 
 Multidimensional subscripts can be used to flatten nested lists.
 
-    my @toomany = [[<a b>], [1,2]];
+    my @toomany = [[<a b>], [1, 2]];
     dd @toomany;
     # OUTPUT«Array @toomany = [["a", "b"], [1, 2]]␤»
     dd @toomany[*;*];
@@ -447,7 +447,7 @@ default value. It will not create a hole. The created holes can be tested for
 with C<:exists> but iteration will not skip them and produce undefined values
 instead.
 
-    my @a = 1,2,3;
+    my @a = 1, 2, 3;
     @a[1]:delete;
     say @a[1]:exists;
     # OUTPUT«False␤»
@@ -576,7 +576,7 @@ the scenes. For example:
     ===============    ==============================================
     %foo<aa>           %foo.AT-KEY("aa")
     %foo<aa>:delete    %foo.DELETE-KEY("aa")
-    @foo[3,4,5]        @foo.AT-POS(3), @foo.AT-POS(4), @foo.AT-POS(5)
+    @foo[3, 4, 5]      @foo.AT-POS(3), @foo.AT-POS(4), @foo.AT-POS(5)
     @foo[*-1]          @foo.AT-POS(@foo.elems - 1)
 
 So in order to make subscripting work, you only have to implement or
