--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -188,15 +188,15 @@ Arrays, use instead:
 It is also common to expect this to work, when it does not:
 
     sub bar(Int @a) { 42.say };
-    bar([1,2,3]);               #-> expected Positional[Int] but got Array
+    bar([1, 2, 3]);             #-> expected Positional[Int] but got Array
 
-The problem here is that [1,2,3] is not an C<Array[Int]>, it is a plain
+The problem here is that [1, 2, 3] is not an C<Array[Int]>, it is a plain
 old Array that just happens to have Ints in it.  To get it to work,
 the argument must also be an C<Array[Int]>.
 
-    my Int @b = 1,2,3;
+    my Int @b = 1, 2, 3;
     bar(@b);                    #-> 42
-    bar(Array[Int].new(1,2,3));
+    bar(Array[Int].new(1, 2, 3));
 
 This may seem inconvenient, but on the upside it moves the type-check
 on what is assigned to C<@b> to where the assignment happens, rather
