--- a/Type/List.pod
+++ b/Type/List.pod
@@ -755,7 +755,7 @@ by repeatedly applying a function which knows how to combine I<two> values.
 More precisely, the specified C<&with> is first called for the first two
 values of the list, then for the result of that calculation and the third
 value, and so on - and the final result is returned. In other words,
-C<(2,4,6,8).reduce(*+*)> is the same as C<(((2+4)+6)+8)>.
+C<(2, 4, 6, 8).reduce(*+*)> is the same as C<(((2+4)+6)+8)>.
 
 If C<@values> contains just a single element, that element is returned
 immediately. If it contains no elements, an exception is thrown. For this
@@ -767,7 +767,7 @@ value:
 
 As a special case, if C<&with> is the function object of an I<operator>, its
 inherent identity value and associativity is respected - in other words,
-C<(VAL1,VAL2,VAL3).reduce(&[OP])> is the same as C<VAL1 OP VAL2 OP VAL3> even
+C<(VAL1, VAL2, VAL3).reduce(&[OP])> is the same as C<VAL1 OP VAL2 OP VAL3> even
 for operators which aren't left-associative, and an empty C<@values> list is
 allowed now. And since reducing with an infix operator is a common thing to do,
 the C<[ ]> meta-operator provides a syntactic shortcut:
