--- a/Type/Metamodel/ClassHOW.pod
+++ b/Type/Metamodel/ClassHOW.pod
@@ -55,7 +55,7 @@ If C<$condition> returns a false value, the
 next fallback (if any) is tried, and if none matches, an exception
 L<of type X::Method::NotFound|/type/X::Method::NotFound> is thrown.
 
-User-facing code (that is, ,code not dabbling with meta classes) should use
+User-facing code (that is, code not dabbling with meta classes) should use
 method C<FALLBACK> instead.
 
 =head2 method can
