--- a/Type/Scalar.pod
+++ b/Type/Scalar.pod
@@ -40,13 +40,13 @@ C<.VAR>:
 This same thing happens when values are assigned to an element of
 an C<Array>, however, C<List>s directly contain their values:
 
-    my @a = 1,2,3;
-    @a[0].WHAT.say;          # says "(Int)"
-    @a[0].VAR.WHAT.say;      # says "(Scalar)"
-    [1,2,3][0].WHAT.say;     # says "(Int)"
-    [1,2,3][0].VAR.WHAT.say; # says "(Scalar)"
-    (1,2,3)[0].WHAT.say;     # says "(Int)"
-    (1,2,3)[0].VAR.WHAT.say; # says "(Int)"
+    my @a = 1, 2, 3;
+    @a[0].WHAT.say;            # says "(Int)"
+    @a[0].VAR.WHAT.say;        # says "(Scalar)"
+    [1, 2, 3][0].WHAT.say;     # says "(Int)"
+    [1, 2, 3][0].VAR.WHAT.say; # says "(Scalar)"
+    (1, 2, 3)[0].WHAT.say;     # says "(Int)"
+    (1, 2, 3)[0].VAR.WHAT.say; # says "(Int)"
 
 Array elements may be bound directly to values using C<:=> as well,
 however this is to be discouraged as it may lead to confusion.
@@ -54,8 +54,8 @@ Doing so will break exact round-tripping of C<.perl> output -- since
 C<Array>s are assumed to place C<Scalar>s around each element,
 C<Scalar>s are not denoted with C<$> in the output of C<Array.perl>.
 
-    [1,$(2,3)].perl.say      # says [1, (2, 3)]
-    (1,$(2,3)).perl.say      # says (1, $(2, 3))
+    [1, $(2, 3)].perl.say      # says [1, (2, 3)]
+    (1, $(2, 3)).perl.say      # says (1, $(2, 3))
 
 Binding a Scalar to a C<$>-sigiled variable replaces the existing
 C<Scalar> in that variable, if any, with the given C<Scalar>.
