--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -32,7 +32,7 @@ my $s = sub B<(*@a)> { }
 for @list -> B<$x> { }
 #            ^^   Signature of a L<block|Block>
 
-my B<($a, @b)> = 5, (6,7,8);
+my B<($a, @b)> = 5, (6, 7, 8);
 #  ^^^^^^^^ Signature of a variable declarator
 
 my $sig = B<:($a, $b)>;
@@ -245,7 +245,7 @@ to a function, like someone slurping up noodles.
 sub one-arg (@)     { }
 sub slurpy  (B<*@>) { }
 one-arg(5, 6, 7) ; # !!! too many arguments
-one-arg (5, 6, 7); # ok, same as one-arg((5,6,7))
+one-arg (5, 6, 7); # ok, same as one-arg((5, 6, 7))
 slurpy  (5, 6, 7); # ok
 one-arg  5, 6, 7 ; # !!! too many arguments
 slurpy   5, 6, 7 ; # ok
@@ -264,9 +264,9 @@ dissolving one or more layers of bare C<Iterables>.  Slurpy parameters declared
 with two stars do not do so:
 
     sub a (*@a) { @a.join("|").say };
-    a(1,[1,2],([3,4],5)); # 1|1|2|3|4|5
+    a(1, [1, 2], ([3, 4], 5)); # 1|1|2|3|4|5
     sub b (**@b) { @b.join("|").say };
-    b(1,[1,2],([3,4],5)); # 1|1 2|3 4 5
+    b(1, [1, 2], ([3, 4], 5)); # 1|1 2|3 4 5
 
 Normally a slurpy parameter will create an Array, create a new
 Scalar container for each argument, and assign the value from each
@@ -290,7 +290,7 @@ will be promoted to a list with a single item.
     sub f(+@a){ dd @a };
     f(1);
     # OUTPUT«[1]␤»
-    f(1,2,3);
+    f(1, 2, 3);
     # OUTPUT«[1, 2, 3]␤»
     my @b = <a b c>;
     f @b;
@@ -526,7 +526,7 @@ The first three see if the argument could be bound to the capture,
 i.e., if a function with that C<Signature> would be able to be called
 with the C<$topic>:
 
-    (1,2, :foo) ~~ :($a, $b, :foo($bar))    # True
+    (1, 2, :foo) ~~ :($a, $b, :foo($bar))   # True
     <a b c d> ~~ :(Int $a)                  # False
 
 The last returns C<True> if anything accepted by C<$topic> would also
