--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -147,8 +147,8 @@ do that on a list.  This is separate from the type of elements in the array:
 if they are containers, then they are also mutable, but they don't have to
 be.  Arrays are typically recognizable by the L<#@> L<sigil|#Sigil>.
 
-    my @array = 1,2,3;
-    say @a;             # [1 2 3]
+    my @array = 1, 2, 3;
+    say @array;           # [1 2 3]
 
 =head1 Arity
 
@@ -191,7 +191,7 @@ value of the junction. The result of these calls is assembled in a new
 junction of the same type as the original junction.
 
     sub f($x) { 2 * $x };
-    say f(1|2|3) == 4;    # any(False,True,False)
+    say f(1|2|3) == 4;    # any(False, True, False)
 
 Here C<f()> is a sub with one parameter, and since it has no explicit type,
 it is implicitly typed as C<Any>.  The C<Junction> argument causes the
@@ -249,8 +249,8 @@ See the L<Wikipedia entry|https://en.wikipedia.org/wiki/Class_%28computer_progra
 A colon pair is a shorthand syntax used to create or visually present
 a Pair object.  The two most common forms are:
 
-    :a(4)          # Same as "a" => 4,   same as Pair.new("a",4)
-    :a<4>          # Same as "a" => "4", same as Pair.new("a","4")
+    :a(4)          # Same as "a" => 4,   same as Pair.new("a", 4)
+    :a<4>          # Same as "a" => "4", same as Pair.new("a", "4")
 
 This is also known as the adverbial pair form.  Note: when the part after
 the colon and before the brackets is not a legal identifier, other
@@ -294,7 +294,7 @@ Note that you can also differentiate candidates in a
 L<multi-dispatch|#Multi-Dispatch> by using a different constraint:
 
     multi sub abbreviate(Str $thing where { .chars > 10 }) {
-        "$thing.substr(0,7)..."
+        "$thing.substr(0, 7)..."
     }
     multi sub abbreviate(Str $thing) { $thing }  # no constraint
 
@@ -623,7 +623,7 @@ in Perl 6.  It is what C<self> refers to in a method.
 
 =head1 JIT
 
-L<Just-in-time compilation|https://en.wikipedia.org/wiki/Just-in-time_compilation>,a technique for improving the performance of virtual machines.
+L<Just-in-time compilation|https://en.wikipedia.org/wiki/Just-in-time_compilation>, a technique for improving the performance of virtual machines.
 
 =head1 Junction
 
