--- a/Type/Parameter.pod
+++ b/Type/Parameter.pod
@@ -124,7 +124,7 @@ Returns C<True> for parameters that capture the rest of the argument list into
 a single L<Capture|/type/Capture> object.
 
     sub how_many_extra_positionals($!, |capture) { capture.elems.say }
-    how_many_extra_positionals(0,1,2,3);                           #-> 3
+    how_many_extra_positionals(0, 1, 2, 3);                        #-> 3
     say &how_many_extra_positionals.signature.params[1].capture;   #-> True
 
 Like raw parameters, Capture parameters do not force any context on the
@@ -172,18 +172,18 @@ type captures can be used wherever you would use a type, even later
 in same the signature:
 
     sub c(::T $x, T $y, $z) { my T $zz = $z };
-    c(4,5,6);           # OK
-    c(4,5,"six");       # Fails when assigning to $zz, wants Int not Str
-    c("four",5,"six");  # Fails when binding $y, wants Str, not Int
+    c(4, 5, 6);          # OK
+    c(4, 5, "six");      # Fails when assigning to $zz, wants Int not Str
+    c("four", 5, "six"); # Fails when binding $y, wants Str, not Int
 
 Type captures may be used at the same time as
 L<type constraints|/type/Signature#Type_Constraints>.
 
     sub d(::T Numeric $x, T $y);
-    d(4,5);             # OK
-    d(4e0,5e0);         # OK
-    d(4e0,5);           # Fails when binding $y
-    d("four","five");   # Fails when binding $x
+    d(4, 5);            # OK
+    d(4e0, 5e0);        # OK
+    d(4e0, 5);          # Fails when binding $y
+    d("four", "five");  # Fails when binding $x
 
 =head2 method sub_signature
 
