--- a/Type/Slip.pod
+++ b/Type/Slip.pod
@@ -31,15 +31,15 @@ from the C<slip> subroutine in both precedence and treatment of single arguments
 In fact, C<prefix:<|>> only takes a single argument, so it that way, it behaves
 closer to the C<.Slip> method than the C<slip> subroutine.
 
-    my $l = (1,2,3);
-    say (1, slip 2,3).perl;   # says (1,2,3)        , slips 2,3 into (1, …)
-    say (0, slip $l).perl;    # says (0,$(1,2,3))   , $l does not break apart
-    say (0, $l.Slip).perl;    # says (0,1,2,3)      , slips from $l into (0, …)
-    say (|$l).perl;           # says slip(1,2,3)    , breaks apart $l
+    my $l = (1, 2, 3);
+    say (1, slip 2, 3).perl;  # says (1, 2, 3)      , slips 2, 3 into (1, …)
+    say (0, slip $l).perl;    # says (0, $(1, 2, 3)), $l does not break apart
+    say (0, $l.Slip).perl;    # says (0, 1, 2, 3)   , slips from $l into (0, …)
+    say (|$l).perl;           # says slip(1, 2, 3)  , breaks apart $l
     say (0, (|$l, 4), 5);     # says (0 (1 2 3 4) 5), slips from $l into (…, 4)
     say (0, ($l.Slip, 4), 5); # says (0 (1 2 3 4) 5), slips from $l into (…, 4)
-    say (0, (slip $l, 4), 5); # says (0 (1 2 3) 4 5), slips ($l,4) into (0, …, 5)
-    say (0, ($l, 4).Slip, 5); # says (0 (1 2 3) 4 5), slips ($l,4) into (0, …, 5)
+    say (0, (slip $l, 4), 5); # says (0 (1 2 3) 4 5), slips ($l, 4) into (0, …, 5)
+    say (0, ($l, 4).Slip, 5); # says (0 (1 2 3) 4 5), slips ($l, 4) into (0, …, 5)
 
 Loops that do not want to produce a value for an iteration use C<Slips>, rather
 than empty C<List>s to do so, as do C<if> statements that do not run their
