--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -500,6 +500,20 @@ The operator for calling one method, C<$invocant.method>.X<|method call>
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+=head2 postfix X<C«.&»>
+
+The operator to call a subroutine (with at least one positional argument) like
+a method. The invocant will be bound to the first positional argument.
+
+Technically this is not an operator, but syntax special-cased in the compiler.
+
+    my sub f($invocant){ dd $invocant; }
+    my $i = 42;
+    42.&f;
+    # OUTPUT«Int $invocant = 42␤»
+    42.&(-> $invocant { dd $invocant });
+    # OUTPUT«Int $invocant = 42␤»
+
 =head2 postfix C«.=»
 
 A X<mutating method call>. C<$invocant.=method> desugars to
