skip redirects for www.perl.org

--- a/HomePage.pod
+++ b/HomePage.pod
@@ -55,7 +55,7 @@ and <a href="/language/faq">FAQs (Frequently Asked Questions)</a>.</p>
 You may also be interested in the Perl 6 <a href="https://design.perl6.org">design documents</a>,
 which are in some places more complete than this documentation, but targeted
 toward compiler writers rather than users of the language.
-Documentation for the different but related <a href="http://perl.org/">Perl 5</a> language
+Documentation for the different but related <a href="https://www.perl.org/">Perl 5</a> language
 can be found on the <a href="http://perldoc.perl.org/">Perl 5 documentation website</a>.
 </p>
 =end Html
