add a few operators to the index

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -500,7 +500,8 @@ The operator for calling one method, C<$invocant.method>.X<|method call>
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
-=head2 postfix X<C«.&»>
+X«|postfix .&»
+=head2 postfix C«.&»
 
 The operator to call a subroutine (with at least one positional argument) like
 a method. The invocant will be bound to the first positional argument.
@@ -521,6 +522,7 @@ C<$invocant = $invocant.method>, similar to L<C<=>>.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+X«|postfix .^»
 =head2 postfix C«.^»
 
 A X<meta-method call>. C<$invocant.^method> calls C<method> on C<$invocant>'s
@@ -529,6 +531,7 @@ for more information.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+X«|postfix .?»
 =head2 postfix C«.?»
 
 X<Potential method call>s. C<$invocant.?method> calls method C<method> on
@@ -536,6 +539,7 @@ C<$invocant> if it has a method of such name. Otherwise it returns L<Nil>.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+X«|postfix .+»
 =head2 postfix C«.+»
 
 C<$invocant.+method> calls all methods called C<method> from C<$invocant>,
@@ -543,6 +547,7 @@ and returns a L<List> of the results. Dies if no such method was found.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+X«|postfix .*»
 =head2 postfix C«.*»
 
 C<$invocant.*method> calls all methods called C<method> from C<$invocant>,
@@ -551,6 +556,7 @@ L<List> is returned.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+X<|postfix ».>
 =head2 postfix C<».> / postfix C«>>.»
 
 X<Hyper method call operator>. Will call a method on all elements of a C<List> out of order and return the list of return values in order.
